fixed margin issue on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,7 +52,7 @@ body {
 }
 
 @media (max-width: 768px) {
-  .translate-widget {
-    margin: 4rem 1.5rem;
+  .main {
+    margin: 1.5rem;
   }
 }
